standalone/traefik/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-express-ingress

spec:
  rules:
    - http:
        paths:
          - path: /mongo
            pathType: Exact
            backend:
              service:
                name:  mongo-express-service
                port:
                  number: 8081
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute
spec:
# more fields...
  routes:
    # more fields...
    middlewares:
      - name: mongo-express-stripprefix
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: mongo-express-stripprefix
spec:
  stripPrefix:
    prefixes:
      - "/mongo"
    forceSlash: false
